--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     image: pihole/pihole:latest
     # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
     ports:
-      - "53:53/tcp"
-      - "53:53/udp"
+      - "127.0.0.1:53:53/tcp"
+      - "127.0.0.1:53:53/udp"
       # - "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
       - "8080:80/tcp"
     environment:
       TZ: 'America/New_York'
-      WEBPASSWORD: 'password'
+      WEBPASSWORD: ${PIHOLE_PASSWORD}
       PIHOLE_DNS_: 172.21.200.3#53 # forward to unbound
     # Volumes store your data between container upgrades
     volumes:
@@ -33,8 +33,8 @@ services:
     hostname: unbound.local
     restart: unless-stopped
     ports:
-      - "5335:53/tcp" # expose a different port (5335) so you can use it directly
-      - "5335:53/udp"
+      - "127.0.0.1:5335:53/tcp" # expose a different port (5335) so you can use it directly
+      - "127.0.0.1:5335:53/udp"
     networks:
       pihole_dns_network:
         ipv4_address: 172.21.200.3 # <-- this is used by pihole as upstream DNS
@@ -43,15 +43,19 @@ services:
       environment:
         # ⚠️ Required:
         # Change this to your host's public address
-        - WG_HOST=summry.me
+        WG_HOST: ${WG_EASY_WG_HOST}
+        # - WEBUI_HOST=localhost
 
         # Optional:
-        # - PASSWORD=foobar123
+        PASSWORD: ${WG_EASY_PASSWORD}
         # - WG_PORT=51820
         # - WG_DEFAULT_ADDRESS=10.8.0.x
-        -  WG_DEFAULT_DNS=172.21.200.2#53
+        WG_DEFAULT_DNS: 172.21.200.2#53
         # - WG_MTU=1420
-        # - WG_ALLOWED_IPS=192.168.15.0/24, 10.0.1.0/24
+        # - WG_ALLOWED_IPS=${WG_EASY_WG_ALLOWED_IPS}
+
+
+        
         # - WG_PERSISTENT_KEEPALIVE=25
         # - WG_PRE_UP=echo "Pre Up" > /etc/wireguard/pre-up.txt
         # - WG_POST_UP=echo "Post Up" > /etc/wireguard/post-up.txt
@@ -64,7 +68,7 @@ services:
         - ./etc_wireguard:/etc/wireguard
       ports:
         - "51820:51820/udp"
-        - "51821:51821/tcp"
+        - "127.0.0.1:51821:51821/tcp"
       restart: unless-stopped
       cap_add:
         - NET_ADMIN
